# tsukuyomi

./: .dockerignore  .env.sample  .gitattributes  .gitignore  Dockerfile  README.md  compose.yaml  config.py  config.yaml  docker-compose-test.yml  docker-compose.yml  fly.toml  go.mod  go.sum  package.json  pyproject.toml  render.yaml  serve.py  tsconfig.json  tsukuyomi.go  wsgi.py
.github/workflows/: codeql.yml  fly-develop.yml  fly-main.yml  fly.yml  go.yml
backend/: go.mod  go.sum  tsukuyomi.go
backend/controllers/: version.go
backend/ent/: init.go  lineuser.go  lineuser_create.go  lineuser_query.go  mutation.go  tx.go
backend/server/: server.go
backend/youtubeApi/: youtube.go
cmd/tsukuyomi/: main.go
configs/: .env.sample  .gitignore
controllers/: index.go
controllers/discord/: callback.go  discord.go  message.go
controllers/line/: callback.go  client.go  follow.go  line.go  message.go
ent/: client.go  config.go  ent.go  init.go  linesession.go  linesession_create.go  linesession_delete.go  linesession_query.go  linesession_update.go  lineuser_create.go  lineuser_delete.go  lineuser_update.go  mutation.go  runtime.go  tx.go
ent/hook/: hook.go
ent/linesession/: linesession.go  where.go
ent/migrate/: schema.go
ent/predicate/: predicate.go
ent/replysession/: replysession.go  where.go
ent/replystate/: replystate.go  where.go
ent/runtime/: runtime.go
fly.io/: dev.toml
nginx/: Dockerfile
prisma/: schema.prisma
scripts/: DeployCommand.ts
server/: router.go
src/: index.ts
tsukuyomi/: __init__.py
youtubeApi/: youtube.go
(+81 files in other folders)
